# rust-sandwiches

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  compose.yaml  deny.toml  fly.toml
.github/workflows/: ci.yml
entity/: Cargo.toml
entity/src/: sandwich.rs
infrastructure/: Cargo.toml
infrastructure/src/: lib.rs  sandwiches_repository.rs
infrastructure/tests/: test_sandwiches_repository.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20231119_200353_create_sandwiches_table.rs  m20231119_201322_add_initial_data_to_sandwiches_table.rs  m20231125_211922_rename_count_column_in_sandwich_table.rs
src/: cli.rs  lib.rs  main.rs  startup.rs
src/routes/: index.rs  mod.rs  not_found.rs
templates/: base.html  index.html  not_found.html
tests/: test_index.rs  test_not_found.rs
tests/fixtures/: mod.rs  page.rs  spawn_app.rs
