[package]
name = "rust-sandwiches"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "rust_sandwiches"

[workspace]
members = [".", "migration", "entity", "infrastructure"]

[dependencies]
actix-web = "4"
askama = "0.12.1"
env_logger = "0.10.1"
lexopt = "0.3.0"
sea-orm = { version = "0.12", features = [ "sqlx-sqlite", "runtime-tokio-native-tls", "macros" ] }
entity = { path = "entity" }
migration = { path = "migration" }
infrastructure = { path = "infrastructure"}
dotenvy = "0.15.7"

[dev-dependencies]
reqwest = { version = "0.11" }
tokio = "1.32.0"
scraper = "0.17.1"

