[package]
name = "infrastructure"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "infrastructure"
path = "src/lib.rs"

[dependencies]
entity = { path = "../entity" }
sea-orm = { version = "0.12", features = [ "sqlx-sqlite", "sqlx-postgres", "runtime-tokio-rustls", "macros" ] }

[dev-dependencies]
tokio = { version = "1.32.0", features = ["macros"] }
